# genelife

./: CMakeLists.txt  Makefile  result.txt
src/: CMakeLists.txt  cell.h  genelife_ca.cpp  genelife_ca.h  main.cpp  rule.cpp  rule.h
